--- a/staticfiles/style.css
+++ b/staticfiles/style.css
@@ -1,8 +1,7 @@
 body
 {
 	/* background-color: #202534; */
-	
-	background-color: #F0FFFF;
+	background-color: #f7f7f3;
 	color: #000000;
 	font-family: 'Montserrat', sans-serif;
 	font-size: 16px;
@@ -17,19 +16,20 @@ html, body {
 	margin-right:auto;
 	width: 1320px;
 	min-height:  975px;
-	background-color: #F0FFFF;
+	background-color: #ffffff;
 	overflow:hidden;
 }
 
+
+
 .logo
 {
-	text-align: center;
 	width: 450px;
 	font-size: 48px;
-	margin-left: 320px;
+	margin-left: 200px;
 }
 
-a > .logo > img
+.logo > img
 {
 	width: 720px;
 	height: 144px;
@@ -38,9 +38,9 @@ a > .logo > img
 }
 .content
 {
-	
-	background-color: #F0FFFF; 
+	background-color: #ffffff; 
 	width: 1280px;
+	
 	margin-left: auto;
 	margin-right: auto;
 	padding: 1px;
@@ -51,20 +51,19 @@ a > .logo > img
 
 .rightNav
 {
-
-	background-color: #F0FFFF;
+	background-color: #ffffff;
     width: 988px;
     float: right;
 	min-height: 750px;
 	height: auto;
 	padding: 10px 0 0 10px;
 	min-height: 500px;
+	
+	
+	
 }
-
 .topPanel
 {
-	text-align: center;
-	font-size: 22px;
 	background-color: #ffffff;
     width: 260px;
     height: 250px;
@@ -87,9 +86,9 @@ a > .logo > img
 	border-style: solid;
 	border-color: e5e5e5; 
 }
+
 .search
 {
-	
 	background-color: #bde5b9;
 	background-color: #ffffff;
 	height: 50px;
@@ -102,14 +101,6 @@ a > .logo > img
 	margin-right: 10px;
 }
 
-.option
-{
-	padding: 2px;
-	border-bottom: 2px dotted #444444;
-	width: 170px;
-	margin: 0 10px 10px 0;
-}
-
 
 h1 {
     border-bottom:1px solid;
@@ -118,7 +109,7 @@ h1 {
 }
 
 h2 {
-    margin:30px 0 10px;
+    margin:30px 0 20px;
 }
 
 h3{
@@ -127,7 +118,7 @@ font-size: 12px
 
 .post
 {
-	width: 100%;
+	width: 986px;
 	border-color: #e5e5e5;
 	border-style: solid;	
 	margin: 0 0 10px 0;
@@ -137,33 +128,6 @@ font-size: 12px
 	 border-bottom: 1px solid;
 	 padding:0 0 3px 0;
 	 font-size: 24px;
+	 width: 800px;
+	 
  }
- buttonx
- {
-	 margin: 5px 5px 5px 5px;
-	 background-color: e4e43e;
-	 border-tyle: none;
-	 float: right;
- }
- 
-.hr {
-    display: block;
-    height: 1px;
-    border: 0;
-    border-top: 1px solid #000000;
-	width: 100%;
-	margin-right: 10px;
-}
-
-
-a{
-	color: black;
-	text-decoration: none;
-}
-
-a:hover{
-	background-color: gray;
-}
-.m{
-	margin-top: 10 px;
-	margin-bottom: 10px;
