Poprawienie pliku css

--- a/blogs/templates/base.html
+++ b/blogs/templates/base.html
@@ -1,5 +1,5 @@
 {% load staticfiles %}
-<!	DOCTYPE HTML>	
+<!DOCTYPE HTML>	
 <html lang="pl">
 <head>
 	
@@ -9,7 +9,7 @@
 		
 		<meta name="description" content="Serwis blogowy"/>
 		<link href="{% static "style.css" %}" rel="stylesheet"/>
-		<!-- <link href="style.css" rel="stylesheet" type="text/css" /> -->
+		<link href="style.css" rel="stylesheet" type="text/css" />
 		<link href="https://fonts.googleapis.com/css?family=Montserrat&amp;subset=latin-ext" rel="stylesheet">
 
 		
