--- a/staticfiles/admin/css/style.css
+++ b/staticfiles/admin/css/style.css
@@ -1,6 +1,7 @@
 body
 {
 	/* background-color: #202534; */
+	
 	background-color: #f7f7f3;
 	color: #000000;
 	font-family: 'Montserrat', sans-serif;
@@ -20,16 +21,15 @@ html, body {
 	overflow:hidden;
 }
 
-
-
 .logo
 {
+	text-align: center;
 	width: 450px;
 	font-size: 48px;
-	margin-left: 200px;
+	margin-left: 320px;
 }
 
-.logo > img
+a > .logo > img
 {
 	width: 720px;
 	height: 144px;
@@ -38,9 +38,9 @@ html, body {
 }
 .content
 {
+	
 	background-color: #ffffff; 
 	width: 1280px;
-	
 	margin-left: auto;
 	margin-right: auto;
 	padding: 1px;
@@ -51,6 +51,7 @@ html, body {
 
 .rightNav
 {
+
 	background-color: #ffffff;
     width: 988px;
     float: right;
@@ -58,12 +59,12 @@ html, body {
 	height: auto;
 	padding: 10px 0 0 10px;
 	min-height: 500px;
-	
-	
-	
 }
+
 .topPanel
 {
+	text-align: center;
+	font-size: 22px;
 	background-color: #ffffff;
     width: 260px;
     height: 250px;
@@ -86,9 +87,9 @@ html, body {
 	border-style: solid;
 	border-color: e5e5e5; 
 }
-
 .search
 {
+	
 	background-color: #bde5b9;
 	background-color: #ffffff;
 	height: 50px;
@@ -101,6 +102,14 @@ html, body {
 	margin-right: 10px;
 }
 
+.option
+{
+	padding: 2px;
+	border-bottom: 2px dotted #444444;
+	width: 170px;
+	margin: 0 10px 10px 0;
+}
+
 
 h1 {
     border-bottom:1px solid;
@@ -109,7 +118,7 @@ h1 {
 }
 
 h2 {
-    margin:30px 0 20px;
+    margin:30px 0 10px;
 }
 
 h3{
@@ -118,7 +127,7 @@ font-size: 12px
 
 .post
 {
-	width: 986px;
+	width: 100%;
 	border-color: #e5e5e5;
 	border-style: solid;	
 	margin: 0 0 10px 0;
@@ -128,6 +137,33 @@ font-size: 12px
 	 border-bottom: 1px solid;
 	 padding:0 0 3px 0;
 	 font-size: 24px;
-	 width: 800px;
-	 
  }
+ buttonx
+ {
+	 margin: 5px 5px 5px 5px;
+	 background-color: e4e43e;
+	 border-tyle: none;
+	 float: right;
+ }
+ 
+.hr {
+    display: block;
+    height: 1px;
+    border: 0;
+    border-top: 1px solid #000000;
+	width: 100%;
+	margin-right: 10px;
+}
+
+
+a{
+	color: black;
+	text-decoration: none;
+}
+
+a:hover{
+	background-color: gray;
+}
+.m{
+	margin-top: 10 px;
+	margin-bottom: 10px;
