--- a/blogs/templates/base.html
+++ b/blogs/templates/base.html
@@ -8,8 +8,8 @@
 		<title>naszblog</title>
 		
 		<meta name="description" content="Serwis blogowy"/>
-		<link href="{% static "style.css" %}" rel="stylesheet"/>
-		<link href="style.css" rel="stylesheet" type="text/css" />
+		<link href="{% static "style1.css" %}" rel="stylesheet"/>
+		<!-- <link href="style1.css" rel="stylesheet" type="text/css" /> -->
 		<link href="https://fonts.googleapis.com/css?family=Montserrat&amp;subset=latin-ext" rel="stylesheet">
 
 		
